@@ -1,3 +1,11 @@
+2009-11-25  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Client/StackFrame.cs: A frame should be
+	  marked external when file name IS empty.
+
+	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Improve
+	  error handling.
+
 2009-11-24  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Mono.Debugging.Client/StackFrame.cs: Add property for
